--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -255,8 +255,10 @@ jobs:
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
       - name: Run test suite on the frozen app (folder)
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}{% raw %}
         run: |
-          pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir${{ matrix.executable_ext }} test
+          {{ pyinstaller_dir }}/dist/onedir/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir${{ matrix.executable_ext }} test
 
       - name: Compress folder (windows, folder)
         if: contains(matrix.os, 'windows')
@@ -339,12 +341,16 @@ jobs:
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
       - name: Run test suite on the frozen app (file)
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}{% raw %}
         run: |
-          pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux test
+          {{ pyinstaller_dir }}/dist/onefile/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-linux test
 
       - name: Run test suite on the frozen app (folder)
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}{% raw %}
         run: |
-          pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir test
+          {{ pyinstaller_dir }}/dist/onedir/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-linux-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux-dir test
 
       - name: Compress folder (folder)
         working-directory: pyinstaller
