Add workflow for running mypy as an on-push workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,11 @@ ipykernel = "^6.25.1"
 [tool.poetry.group.pyinstaller.dependencies]
 pyinstaller = "^5.13"
 
+[tool.poetry.group.typecheck]
+optional = true
+[tool.poetry.group.typecheck.dependencies]
+mypy = "^1.10.0"
+
 [tool.poetry.extras]
 test = ["pytest"]
 
