--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,22 @@ repos:
     hooks:
       - id: conventional-pre-commit
         stages: [commit-msg]
-        args: [] # optional: list of Conventional Commits types to allow
+        args: # optional: list of Conventional Commits types to allow
+          - build
+          - change
+          - chore
+          - ci
+          - deprecate
+          - docs
+          - feat
+          - fix
+          - perf
+          - refactor
+          - remove
+          - revert
+          - security
+          - style
+          - test
   - repo: https://github.com/python-poetry/poetry
     rev: "1.4"
     hooks:
