feat: initial work for simplified jobscripts with zmq server
WIP: only in powershell initially, bash not yet working (and so now
broken!)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ h5py = "^3.9.0"
 valida = "^0.7.2"
 requests = "^2.31.0"
 platformdirs = "^4.2.1"
+pyzmq = "^26.0.3"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
