--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,9 @@ bump_message = "bump: $current_version → $new_version [skip ci]"
 [tool.black]
 line-length = 90
 
+[tool.mypy]
+incremental = false
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
