--- a/hpcflow/data/template_components/environments.yaml
+++ b/hpcflow/data/template_components/environments.yaml
@@ -4,6 +4,6 @@
   executables:
     - label: python_script
       instances:
-        - command: python <<script_name>> <<args>>
+        - command: python <<script_path>> <<args>>
           num_cores: 1
           parallel_mode: null
