--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -287,6 +287,7 @@ jobs:
     needs: bump-version
     env:
       ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: "true"
+      ACTIONS_RUNNER_FORCE_ACTIONS_NODE_VERSION: node16
     container:
       image: ghcr.io/hpcflow/centos7-poetry:latest
     steps:
