--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -1,21 +1,19 @@
 name: Documentation
 env:
+  PYTHON_VERSION: "3.12"
   POETRY_VERSION: "1.4"
 on: push
 jobs:
   sphinx:
     # Note that we only do this on one platform and with the earliest reasonable Python
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ "3.12" ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Init Python ${{ matrix.python-version }}
+      - name: Init Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Init Poetry ${{ env.POETRY_VERSION }}
         run: |
           python -m pip install poetry==${{ env.POETRY_VERSION }}
@@ -25,13 +23,14 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ./.venv
-          key: ${{ runner.os }}-sphinx-${{ matrix.python-version }}-venv-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-sphinx-${{ env.PYTHON_VERSION }}-venv-${{ hashFiles('**/poetry.lock') }}
       - name: Install Dependencies
         run: |
           poetry install
       - name: Run Sphinx
         run: |
           poetry run make clean html
+        working-directory: docs
       - name: Upload documentation artifact
         uses: actions/upload-artifact@v4
         with:
