--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -30,11 +30,13 @@ jobs:
       - name: Run Sphinx
         run: |
           poetry run make clean html
+          zip -r hpcflow-docs.zip build/html
         working-directory: docs
       - name: Upload documentation artifact
         uses: actions/upload-artifact@v4
         with:
           name: hpcflow documentation ${{ github.ref }}
-          path: docs/build/html
+          path: docs/hpcflow-docs.zip
           if-no-files-found: error
+          compression-level: 0
   # TODO: Publish the docs to an internal site
