--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Install Dependencies
         run: |
           poetry install
+      - name: Configure Problem Matcher
+        run: echo "::add-matcher::.github/problem-matchers/sphinx.json"
+        # See: https://github.com/actions/toolkit/blob/main/docs/problem-matchers.md
+        # See: https://github.com/python/cpython/pull/20325
       - name: Run Sphinx
         run: |
           poetry run make clean html
